core/b2b/core-services/itop/itop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itop
  namespace: itop
  labels:
    app: itop
    core.kaos.io/type: b2b-core
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: itop
  template:
    metadata:
      labels:
        app: itop
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8-node-20
      containers:
        - name: itop
          image: vbkunin/itop:latest-base
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          ports:
            - containerPort: 80
          volumeMounts:
            - name: itop-web-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: itop-web-persistent-storage
          persistentVolumeClaim:
            claimName: itop-web-pvc
        - name: itop-web-branding
          configMap:
            name: itop-web-branding
