core/b2b/core-services/itop/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: itop
  labels:
    app: mysql
    core.kaos.io/type: finops
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
