core/b2b/core-services/itop/itop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itop
  namespace: itop
  labels:
    app: itop
    core.kaos.io/type: finops
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.243
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: https
  selector:
    app: itop
