core/b2b/core-services/itop/itop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itop
  namespace: itop
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - itsm.ka0s.io
      secretName: itop-tls
  rules:
    - host: itsm.ka0s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itop
                port:
                  number: 80
